# ULTIMA-DB2

./: .gitignore  README.md  generate_ros2_structure.py  monado_fullscreen.sh  rover_tmux.sh  station_A_tmux.sh  station_B_tmux.sh  station_tmux.sh  ultima_startup.sh
actuation_pkg/: package.xml  setup.cfg  setup.py  setup_old.py
actuation_pkg/actuation_pkg/: actuation_joystick.py  actuation_slider.py  actuators.py
actuation_pkg/launch/: actuation_with_joystick.launch.py
common_link_lib/: package.xml  setup.cfg  setup.py
common_link_lib/common_link_lib/: frame_manager.py
communication_pkg/: package.xml  setup.py
communication_pkg/communication_pkg/: FrameManager.py  XbeeManager.py  XbeePong.py  cap_com.py  teleop_test.py
communication_pkg/launch/: teleop_robot.launch.py  teleop_station.launch.py  teleop_station_launch.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: SupervisionStatus.msg
dk2_driver_pkg/: CMakeLists.txt  package.xml
dk2_driver_pkg/src/: dk2_node.cpp
docs/: SPEC.md
hall_encoder_pkg/: CMakeLists.txt  package.xml
hall_encoder_pkg/apps/: encoder_monitor.cpp
hall_encoder_pkg/config/: motor_lut.csv
hall_encoder_pkg/include/hall_encoder_pkg/core/: Encoder.hpp  EncoderManager.hpp
hall_encoder_pkg/include/hall_encoder_pkg/hal/: GpioBackend.hpp  GpioLibgpiod.hpp
hall_encoder_pkg/src/: motor_encoder_node.cpp  wheel_encoder_node.cpp
hall_encoder_pkg/src/core/: Encoder.cpp  EncoderManager.cpp
hall_encoder_pkg/src/hal/: GpioLibgpiod.cpp
localization_pkg/param/: ekf.yaml
odometry_raw_pkg/: CMakeLists.txt  package.xml
odometry_raw_pkg/src/: calibrate_encoders.cpp  odom_node.cpp
rover_link_pkg/: package.xml  setup.cfg  setup.py
rover_link_pkg/rover_link_pkg/: command_publisher.py  serial_listener.py
sensor_msgs_pkg/: CMakeLists.txt  package.xml
sensor_msgs_pkg/srv/: SetVideoControls.srv
sensor_pkg/: package.xml  setup.cfg  setup.py
sensor_pkg/sensor_pkg/: __init__.py  video_node.py
station_link_pkg/: package.xml  setup.cfg  setup.py
station_link_pkg/station_link_pkg/: command_node.py  serial_manager.py  supervision_node.py  utils.py
xr_cam_pkg/: CMakeLists.txt  package.xml
xr_cam_pkg/src/: ros2_xr_cam_passthrough_node.cpp
