<?xml version="1.0"?>
<package format="2">
  <name>communication_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 communication node for Xbee</description>
  <maintainer email="you@example.com">ultima</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

