<?xml version="1.0"?>
<package format="3">
  <name>sensor_pkg</name>
  <version>0.1.0</version>
  <description>Python nodes for sensor control</description>
  <maintainer email="ton.email@example.com">TonNom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>sensor_msgs_pkg</build_depend>
  <exec_depend>sensor_msgs_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

